--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+
+
+    implementation('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') {
+        exclude module: 'support-v4'
+    }
+    //implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
+    //implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.0.2'
 }
